# gov-transparency-hub

./: .env  .gitignore  .pre-commit-config.yaml  01-base-schema.sql  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml  workspace.yaml
.github/workflows/: docker-publish.yml
dbt_pipelines/: .user.yml  profiles.yml
dbt_pipelines/models/: expense_invoices.sql  expense_itens.sql  revenue_details.sql  schema.yml  sources.yml
gov_transparency_hub/: __init__.py
gov_transparency_hub/asset_checks/: __init__.py
gov_transparency_hub/assets/: city_expenses.py  city_revenue.py  constants.py  metrics_report.py  utils.py
gov_transparency_hub/dbt_pipelines/models/: expense_details.sql  expense_invoices.sql  expense_itens.sql  revenue_details.sql  schema.yml
gov_transparency_hub/jobs/: __init__.py
gov_transparency_hub/notebooks/: load_expense.ipynb  load_revenue.ipynb
gov_transparency_hub/partitions/: __init__.py
gov_transparency_hub/resources/: PortalTransparenciaScrapper.py  __init__.py  constants.py  dbt_connection.py  postgres_resource.py  s3_resource.py
gov_transparency_hub/schedules/: __init__.py
gov_transparency_hub/sensors/: __init__.py
minas_data_lab/: __init__.py  jobs.py
minas_data_lab/assets/: __init__.py  city_expenses.py  city_revenue.py  constants.py
minas_data_lab/assets/city_revenue/: city_revenue.py
minas_data_lab/jobs/: __init__.py
minas_data_lab/notebooks/: load_expense.ipynb  load_revenue.ipynb
minas_data_lab/partitions/: __init__.py
minas_data_lab/resources/: PortalTransparenciaScrapper.py  __init__.py  constants.py  postgres_io_manager.py  postgres_resource.py  s3_io_manager.py  s3_resource.py
minas_data_lab/schedules/: __init__.py
