[tool.poetry]
name = "gov_transparency_hub"
version = "0.1.0"
description = ""
authors = ["Luis Malta <luiso.malta@gmail.com>"]
readme = "README.md"
packages = [{include = "gov_transparency_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
dagster = ">1.5"
dagit = "^1.3.10"
pandas = "^2.0.2"
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
boto3 = "^1.26.160"
pyarrow = "^12.0.1"
fastparquet = "^2023.4.0"
beautifulsoup4 = "^4.12.2"
dagster-postgres = "^0.21.14"
pre-commit = "^3.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "gov_transparency_hub"

[tool.black]
line-length = 89
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
