[project]
name = "gov-transparency-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "boto3>=1.36.11",
    "dagit>=1.9.11",
    "dagster>=1.9.11",
    "dagster-aws>=0.25.11",
    "dagster-dbt>=0.25.11",
    "dagster-dlt>=0.25.11",
    "dagster-postgres>=0.25.11",
    "dbt-core>=1.9.2",
    "dbt-postgres>=1.9.0",
    "dlt[postgres]>=1.6.1",
    "fastparquet>=2024.11.0",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
]

[tool.dagster]
module_name = "gov_transparency_hub"

[tool.black]
line-length = 89
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
